[package]
name = "oxidized-gpt"
description = "Oxidized-GPT: a minimalist, educational single-file GPT implementation in Rust"
version = "0.1.0"
edition = "2021"

# Zero external dependencies - pure standard library only!

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
